made Boolean.valueof new Boolean guess it was a 1.4 thing
git-svn-id: http://svn.aei.mpg.de/eScience/GridSphere/trunk@2343 9c99c85f-4d0c-0410-8460-a9a1c48a3a7f